# osm-rail-route

./: .gitignore  Cargo.toml  loopdefs.toml  prefneighs.toml  test.ps1  wien.poly  wien_baden_rail.ps1  wien_baden_rail.sh
jsthingy/: package.json  webpack.config.js
jsthingy/src/: index.html  tramroute.ts
src/: algorithms.rs  collections.rs  geo.rs  main.rs  model.rs  timing_logger.rs  util.rs
